--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-streamlit
-pymongo
-passlib
-python-dotenv
-bleach
-emoji
+streamlit==1.31.0
+pymongo==4.6.1
+passlib==1.7.4
+python-dotenv==1.0.1
+bleach==6.1.0
+emoji==2.10.1
